--- a/index.html
+++ b/index.html
@@ -8,16 +8,35 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <nav>
-      <a href="./index.html" id="Logo">Tee</a>
+    <header>
+      <nav>
+        <a href="./index.html" id="Logo">Tee</a>
 
-      <div class="links">
-        <a href="#">About</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
+        <div class="links">
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
+        </div>
+
+        <button>Login</button>
+      </nav>
+      <div class="hero">
+        <figure>
+          <div class="image"></div>
+          <div class="image"></div>
+          <div class="image"></div>
+          <div class="image"></div>
+        </figure>
+        <div class="cta">
+          <!-- Cta means call to action  -->
+          <h1>Discover your inner <span>Mindset</span></h1>
+          <p>
+            we crafted an outwardly experience just for you. We are confident
+            that you will discover your Mindset
+          </p>
+          <button>Get started</button>
+        </div>
       </div>
-
-      <button>Login</button>
-    </nav>
+    </header>
   </body>
 </html>
